# untitled_compiler_project

./: CMakeLists.txt
src/: common.c  common.h  debug.c  debug.h  enums.h  hash_table.c  hash_table.h  helper_functions.c  helper_functions.h  lexer.c  lexer.h  main.c  memory.c  memory.h  parser.c  parser.h  preprocessor.c  preprocessor.h  strings.c  strings.h
src/lexer/: lexer.c  lexer.h
